{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 21,
  "lineage": "5e269bc8-dffc-7b47-b130-1b58bad7fb11",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "TP-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-094a3668b945637ab",
            "domain": "vpc",
            "id": "eipalloc-094a3668b945637ab",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-235-102-128.compute-1.amazonaws.com",
            "public_ip": "18.235.102.128",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "TP-INSTANCE-ADMIN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04cb4ca688797756f",
            "arn": "arn:aws:ec2:us-east-1:973087308139:instance/i-0e8428d59afd13e8b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e8428d59afd13e8b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "loic",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0aec16225c1263bcf",
            "private_dns": "ip-10-0-1-170.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.170",
            "public_ip": "52.91.116.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e5b742f6a715c0bb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c3199c36518b668b",
            "tags": {
              "Name": "TP-INSTANCE-ADMIN"
            },
            "tags_all": {
              "Name": "TP-INSTANCE-ADMIN"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bb26ce9e27dbf584"
            ]
          },
          "dependencies": [
            "aws_security_group.TP-SG-PUBLIC-ADMIN",
            "aws_subnet.TP-SUBNET-PUBLIC",
            "aws_vpc.TP-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "TP-INSTANCE-AZ-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04cb4ca688797756f",
            "arn": "arn:aws:ec2:us-east-1:973087308139:instance/i-05343460955c49c19",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05343460955c49c19",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "loic",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d6ea8e33901af29a",
            "private_dns": "ip-10-0-2-152.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.152",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a16c21b4119994ab",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02c8bac6f778fd677",
            "tags": {
              "Name": "TP-INSTANCE-AZ-A"
            },
            "tags_all": {
              "Name": "TP-INSTANCE-AZ-A"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a1ade492e183891d"
            ]
          },
          "dependencies": [
            "aws_instance.TP-INSTANCE-PROXY",
            "aws_security_group.TP-SG-PRIVE",
            "aws_security_group.TP-SG-PUBLIC-ADMIN",
            "aws_security_group.TP-SG-PUBLIC-PROXY",
            "aws_subnet.TP-SUBNET-AZ-A",
            "aws_subnet.TP-SUBNET-PUBLIC",
            "aws_vpc.TP-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "TP-INSTANCE-AZ-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04cb4ca688797756f",
            "arn": "arn:aws:ec2:us-east-1:973087308139:instance/i-0c2b819d65b00cdb0",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c2b819d65b00cdb0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "loic",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06068b41820f464c0",
            "private_dns": "ip-10-0-3-22.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e106bdb4477a8ce5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e4fc34ab65a5d851",
            "tags": {
              "Name": "TP-INSTANCE-AZ-B"
            },
            "tags_all": {
              "Name": "TP-INSTANCE-AZ-B"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a1ade492e183891d"
            ]
          },
          "dependencies": [
            "aws_instance.TP-INSTANCE-PROXY",
            "aws_security_group.TP-SG-PRIVE",
            "aws_security_group.TP-SG-PUBLIC-ADMIN",
            "aws_security_group.TP-SG-PUBLIC-PROXY",
            "aws_subnet.TP-SUBNET-AZ-B",
            "aws_subnet.TP-SUBNET-PUBLIC",
            "aws_vpc.TP-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "TP-INSTANCE-AZ-C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04cb4ca688797756f",
            "arn": "arn:aws:ec2:us-east-1:973087308139:instance/i-06d0ba8882ee312dd",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06d0ba8882ee312dd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "loic",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-099114755744372a9",
            "private_dns": "ip-10-0-4-139.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.139",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b7293985ed6a985c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce87e59ee0b59788",
            "tags": {
              "Name": "TP-INSTANCE-AZ-C"
            },
            "tags_all": {
              "Name": "TP-INSTANCE-AZ-C"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a1ade492e183891d"
            ]
          },
          "dependencies": [
            "aws_instance.TP-INSTANCE-PROXY",
            "aws_security_group.TP-SG-PRIVE",
            "aws_security_group.TP-SG-PUBLIC-ADMIN",
            "aws_security_group.TP-SG-PUBLIC-PROXY",
            "aws_subnet.TP-SUBNET-AZ-C",
            "aws_subnet.TP-SUBNET-PUBLIC",
            "aws_vpc.TP-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "TP-INSTANCE-PROXY",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04cb4ca688797756f",
            "arn": "arn:aws:ec2:us-east-1:973087308139:instance/i-07a5caaab8e1c208e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07a5caaab8e1c208e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "loic",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09d588f3e2b7dcef4",
            "private_dns": "ip-10-0-1-8.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.8",
            "public_ip": "3.83.245.2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-036628f7cf8381d93",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c3199c36518b668b",
            "tags": {
              "Name": "TP-INSTANCE-PROXY"
            },
            "tags_all": {
              "Name": "TP-INSTANCE-PROXY"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-030f7c88d0f568838"
            ]
          },
          "dependencies": [
            "aws_security_group.TP-SG-PUBLIC-ADMIN",
            "aws_security_group.TP-SG-PUBLIC-PROXY",
            "aws_subnet.TP-SUBNET-PUBLIC",
            "aws_vpc.TP-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "TP-INSTANCE-RPROXY",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04cb4ca688797756f",
            "arn": "arn:aws:ec2:us-east-1:973087308139:instance/i-0db6040102033a686",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0db6040102033a686",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "loic",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01da55b387a69dd12",
            "private_dns": "ip-10-0-1-156.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.156",
            "public_ip": "3.90.84.91",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03a2b4af5a627e190",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c3199c36518b668b",
            "tags": {
              "Name": "TP-INSTANCE-RPROXY"
            },
            "tags_all": {
              "Name": "TP-INSTANCE-RPROXY"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-024573069af13f72a"
            ]
          },
          "dependencies": [
            "aws_instance.TP-INSTANCE-AZ-A",
            "aws_instance.TP-INSTANCE-AZ-B",
            "aws_instance.TP-INSTANCE-AZ-C",
            "aws_instance.TP-INSTANCE-PROXY",
            "aws_security_group.TP-SG-PRIVE",
            "aws_security_group.TP-SG-PUBLIC-ADMIN",
            "aws_security_group.TP-SG-PUBLIC-PROXY",
            "aws_security_group.TP-SG-PUBLIC-RPROXY",
            "aws_subnet.TP-SUBNET-AZ-A",
            "aws_subnet.TP-SUBNET-AZ-B",
            "aws_subnet.TP-SUBNET-AZ-C",
            "aws_subnet.TP-SUBNET-PUBLIC",
            "aws_vpc.TP-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "TP-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973087308139:internet-gateway/igw-029fbf6eb7d6213a7",
            "id": "igw-029fbf6eb7d6213a7",
            "owner_id": "973087308139",
            "tags": {
              "Name": "TP-IGW"
            },
            "tags_all": {
              "Name": "TP-IGW"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "TP-RTB-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973087308139:route-table/rtb-0fc47d2ad0a2fb037",
            "id": "rtb-0fc47d2ad0a2fb037",
            "owner_id": "973087308139",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-029fbf6eb7d6213a7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TP-RTB-PUBLIC"
            },
            "tags_all": {
              "Name": "TP-RTB-PUBLIC"
            },
            "timeouts": null,
            "vpc_id": "vpc-014567b6158f3ca93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.TP-IGW",
            "aws_vpc.TP-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "TP-RTB-PUBLIC-ASSOC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0445bccba6d478992",
            "route_table_id": "rtb-0fc47d2ad0a2fb037",
            "subnet_id": "subnet-0c3199c36518b668b"
          },
          "dependencies": [
            "aws_internet_gateway.TP-IGW",
            "aws_route_table.TP-RTB-PUBLIC",
            "aws_subnet.TP-SUBNET-PUBLIC",
            "aws_vpc.TP-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "TP-SG-PRIVE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973087308139:security-group/sg-0a1ade492e183891d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a1ade492e183891d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bb26ce9e27dbf584"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-030f7c88d0f568838"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230922142653984800000005",
            "name_prefix": "terraform-",
            "owner_id": "973087308139",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TP-SG-PRIVE"
            },
            "tags_all": {
              "Name": "TP-SG-PRIVE"
            },
            "timeouts": null,
            "vpc_id": "vpc-014567b6158f3ca93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.TP-SG-PUBLIC-ADMIN",
            "aws_security_group.TP-SG-PUBLIC-PROXY",
            "aws_vpc.TP-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "TP-SG-PUBLIC-ADMIN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973087308139:security-group/sg-0bb26ce9e27dbf584",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bb26ce9e27dbf584",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230922142646803000000001",
            "name_prefix": "terraform-",
            "owner_id": "973087308139",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TP-SG-PUBLIC-ADMIN"
            },
            "tags_all": {
              "Name": "TP-SG-PUBLIC-ADMIN"
            },
            "timeouts": null,
            "vpc_id": "vpc-014567b6158f3ca93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.TP-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "TP-SG-PUBLIC-PROXY",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973087308139:security-group/sg-030f7c88d0f568838",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-030f7c88d0f568838",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bb26ce9e27dbf584"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230922142650311600000004",
            "name_prefix": "terraform-",
            "owner_id": "973087308139",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TP-SG-PUBLIC-PROXY"
            },
            "tags_all": {
              "Name": "TP-SG-PUBLIC-PROXY"
            },
            "timeouts": null,
            "vpc_id": "vpc-014567b6158f3ca93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.TP-SG-PUBLIC-ADMIN",
            "aws_vpc.TP-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "TP-SG-PUBLIC-RPROXY",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973087308139:security-group/sg-024573069af13f72a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-024573069af13f72a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bb26ce9e27dbf584"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230922142650308400000003",
            "name_prefix": "terraform-",
            "owner_id": "973087308139",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TP-SG-PUBLIC-RPROXY"
            },
            "tags_all": {
              "Name": "TP-SG-PUBLIC-RPROXY"
            },
            "timeouts": null,
            "vpc_id": "vpc-014567b6158f3ca93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.TP-SG-PUBLIC-ADMIN",
            "aws_vpc.TP-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "TP-SUBNET-AZ-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973087308139:subnet/subnet-02c8bac6f778fd677",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c8bac6f778fd677",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "973087308139",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TP-SUBNET-AZ-A"
            },
            "tags_all": {
              "Name": "TP-SUBNET-AZ-A"
            },
            "vpc_id": "vpc-014567b6158f3ca93"
          },
          "dependencies": [
            "aws_vpc.TP-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "TP-SUBNET-AZ-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973087308139:subnet/subnet-0e4fc34ab65a5d851",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4fc34ab65a5d851",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "973087308139",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TP-SUBNET-AZ-B"
            },
            "tags_all": {
              "Name": "TP-SUBNET-AZ-B"
            },
            "vpc_id": "vpc-014567b6158f3ca93"
          },
          "dependencies": [
            "aws_vpc.TP-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "TP-SUBNET-AZ-C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973087308139:subnet/subnet-0ce87e59ee0b59788",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce87e59ee0b59788",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "973087308139",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TP-SUBNET-AZ-C"
            },
            "tags_all": {
              "Name": "TP-SUBNET-AZ-C"
            },
            "vpc_id": "vpc-014567b6158f3ca93"
          },
          "dependencies": [
            "aws_vpc.TP-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "TP-SUBNET-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973087308139:subnet/subnet-0c3199c36518b668b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3199c36518b668b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "973087308139",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TP-SUBNET-PUBLIC"
            },
            "tags_all": {
              "Name": "TP-SUBNET-PUBLIC"
            },
            "vpc_id": "vpc-014567b6158f3ca93"
          },
          "dependencies": [
            "aws_vpc.TP-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "TP-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973087308139:vpc/vpc-014567b6158f3ca93",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-028fa12106018159a",
            "default_route_table_id": "rtb-095902f87db024dd0",
            "default_security_group_id": "sg-06d371dd99e87b148",
            "dhcp_options_id": "dopt-01e49b8eb85ce9ca9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-014567b6158f3ca93",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-095902f87db024dd0",
            "owner_id": "973087308139",
            "tags": {
              "Name": "TP-VPC"
            },
            "tags_all": {
              "Name": "TP-VPC"
            }
          }
        }
      ]
    }
  ]
}